fix firefox content overflow

--- a/client/src/components/ide/StageContainer.scss
+++ b/client/src/components/ide/StageContainer.scss
@@ -8,7 +8,8 @@
 
   .main-content {
     width: 100%;
-    height: 100%;
+    overflow: hidden;
+    flex-grow: 1;
     display: flex;
   }
 }
