--- a/client/src/components/ide/sidebar/Sidebar.scss
+++ b/client/src/components/ide/sidebar/Sidebar.scss
@@ -2,7 +2,6 @@
 @import 'SidebarList';
 
 .stage-container-sidebar {
-  min-height: 100%;
   overflow-y: scroll;
   background-color: $bg-container;
   width: $sidebar-width;
